--- a/css/pay.css
+++ b/css/pay.css
@@ -1,7 +1,7 @@
 #middle .containe {
   width: 100%;
   background-color: #EEE;
-  height: 600px;
+  padding-bottom: 64px;
 }
 
 #middle .containe .order_info {
@@ -94,13 +94,14 @@
 
 #middle .containe .wd_pay {
   margin: 85px auto 32px auto;
-  width: 1200px;
+  width: 1140px;
+  padding: 92px 30px 49px 30px;
   position: relative;
   background-color: #fff;
-  -webkit-box-shadow: 10px 10px 5px #888888;
-  -moz-box-shadow: 10px 10px 5px #888888;
-  -o-box-shadow: 10px 10px 5px #888888;
-  box-shadow: 10px 10px 5px #888888;
+  -webkit-box-shadow: 0px 0px 30px #D8D8D8;
+  -moz-box-shadow: 0px 0px 30px #D8D8D8;
+  -o-box-shadow: 0px 0px 30px #D8D8D8;
+  box-shadow: 0px 0px 30px #D8D8D8;
 }
 
 #middle .containe .wd_pay > h2 {
@@ -111,32 +112,242 @@
   height: 41px;
   line-height: 35px;
   background: url(../images/pay_bg.png) no-repeat;
+  position: absolute;
+  top: 11px;
+  left: -5px;
 }
 
-#middle .containe .wd_pay .pay_list li {
+#middle .containe .wd_pay .pay_list {
+  padding-bottom: 14px;
+}
+
+#middle .containe .wd_pay .pay_list > li {
   line-height: 55px;
   height: 55px;
   color: #5a5a5a;
   font-size: 14px;
+  border: 1px solid #C9C9C9;
+  border-bottom: none;
+  position: relative;
 }
 
-#middle .containe .wd_pay .pay_list li > em {
-  font-style: normal;
-}
-
-#middle .containe .wd_pay .pay_list li .checkbox {
+#middle .containe .wd_pay .pay_list > li .checkbox {
   width: 21px;
-  height: 55px;
+  height: 21px;
   float: left;
+  margin: 0 31px 0 13px;
+  cursor: pointer;
+  margin-top: 18px;
 }
 
-#middle .containe .wd_pay .pay_list li .checkbox > span {
+#middle .containe .wd_pay .pay_list > li .checkbox > span {
   display: block;
   width: 21px;
-  height: 55px;
+  height: 21px;
+  background: url(../images/checkbox_false3.png) no-repeat center;
+}
+
+#middle .containe .wd_pay .pay_list > li .checkbox > input {
+  display: none;
+}
+
+#middle .containe .wd_pay .pay_list > li .checkbox .checked {
   background: url(../images/checkbox_true3.png) no-repeat center;
 }
 
-#middle .containe .wd_pay .pay_list li .checkbox > input {
+#middle .containe .wd_pay .pay_list > li .bank_name {
+  float: left;
+  padding: 0 70px 0 0;
+}
+
+#middle .containe .wd_pay .pay_list > li .bank_name > img {
+  vertical-align: top;
+  margin-right: 14px;
+  margin-top: 15px;
+}
+
+#middle .containe .wd_pay .pay_list > li .card {
+  float: left;
+  padding-right: 37px;
+}
+
+#middle .containe .wd_pay .pay_list > li .max {
+  float: left;
+  margin-right: 4px;
+}
+
+#middle .containe .wd_pay .pay_list > li > em {
+  font-style: normal;
+  float: left;
+  width: 36px;
+  height: 23px;
+  background-color: #637fbe;
+  color: #fff;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  margin: 16px 4px 0 4px;
+  line-height: 23px;
+  text-align: center;
+}
+
+#middle .containe .wd_pay .pay_list > li .highest {
+  color: #637fbe;
+  background: url(../images/arrows_icon7.png) no-repeat right center;
+  padding-right: 12px;
+  cursor: pointer;
+}
+
+#middle .containe .wd_pay .pay_list > li .fav_list {
+  padding-right: 12px;
+  position: absolute;
+  top: 38px;
+  left: 494px;
+  background-color: #fff;
+  z-index: 99;
+  border: 1px solid #C9C9C9;
   display: none;
+}
+
+#middle .containe .wd_pay .pay_list > li .fav_list > li {
+  color: #637fbe;
+  line-height: 20px;
+  cursor: pointer;
+}
+
+#middle .containe .wd_pay .pay_list > li:last-of-type {
+  border-bottom: 1px solid #C9C9C9;
+}
+
+#middle .containe .wd_pay .pay_list .active > em {
+  background-color: #B90101;
+}
+
+#middle .containe .wd_pay .pay_list .active .highest {
+  color: #B90101;
+  background: url(../images/arrows_icon6.png) no-repeat right center;
+}
+
+#middle .containe .wd_pay .pay_list .active > ul > li {
+  color: #B90101;
+}
+
+#middle .containe .wd_pay .add_card {
+  display: block;
+  width: 158px;
+  height: 31px;
+  border: 1px solid #C9C9C9;
+  color: #1d8298;
+  line-height: 31px;
+  text-align: center;
+  margin-left: 66px;
+}
+
+#middle .containe .wd_pay .paying {
+  margin-left: 66px;
+}
+
+#middle .containe .wd_pay .paying > label {
+  color: #666;
+  font-size: 14px;
+}
+
+#middle .containe .wd_pay .paying > div {
+  margin: 10px 0 0 5px;
+  overflow: hidden;
+}
+
+#middle .containe .wd_pay .paying > div .pwd {
+  width: 215px;
+  height: 34px;
+  border: 1px solid #C9C9C9;
+  float: left;
+  cursor: text;
+}
+
+#middle .containe .wd_pay .paying > div .pwd > input {
+  background-color: #fff;
+  width: 35px;
+  height: 24px;
+  float: left;
+  border-left: 1px solid #C9C9C9;
+  text-align: center;
+  line-height: 24px;
+  margin-top: 5px;
+  color: #666;
+  font-size: 20px;
+  cursor: text;
+}
+
+#middle .containe .wd_pay .paying > div .pwd > input:first-of-type {
+  border-left: none;
+}
+
+#middle .containe .wd_pay .paying > div > a {
+  color: #1d8298;
+  font-size: 14px;
+  float: left;
+  line-height: 36px;
+  margin-left: 13px;
+}
+
+#middle .containe .wd_pay .paying > input[type=submit] {
+  text-align: center;
+  width: 196px;
+  height: 42px;
+  line-height: 42px;
+  color: #fff;
+  font-size: 14px;
+  background-color: #B90101;
+  cursor: pointer;
+  font-weight: bold;
+  margin: 10px 0 0 7px;
+}
+
+#middle .containe .pay_style {
+  margin: 32px auto 0 auto;
+  width: 1155px;
+  padding: 69px 0 14px 45px;
+  position: relative;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 30px #D8D8D8;
+  -moz-box-shadow: 0px 0px 30px #D8D8D8;
+  -o-box-shadow: 0px 0px 30px #D8D8D8;
+  box-shadow: 0px 0px 30px #D8D8D8;
+}
+
+#middle .containe .pay_style > h2 {
+  font-size: 16px;
+  color: #fff;
+  text-align: center;
+  width: 106px;
+  height: 31px;
+  line-height: 28px;
+  background: url(../images/pay_bg2.png) no-repeat;
+  position: absolute;
+  top: 10px;
+  left: -5px;
+}
+
+#middle .containe .pay_style > ul {
+  overflow: hidden;
+}
+
+#middle .containe .pay_style > ul > li {
+  float: left;
+  padding: 0 13px;
+  border-right: 1px solid #666;
+  line-height: 15px;
+}
+
+#middle .containe .pay_style > ul > li a {
+  color: #666;
+  font-size: 16px;
+  vertical-align: text-top;
+}
+
+#middle .containe .pay_style > ul > li:last-of-type {
+  border-right: none;
 }
