--- a/css/pay_failure.scss
+++ b/css/pay_failure.scss
@@ -52,7 +52,6 @@ $telFontSize:36px;
                     position: relative;
                     width: 205px;
                     height: 7px;
-                    @include border-radius(3px);
                     background-color: #C5C5C5;
                     >span,
                     >h5 {
@@ -81,8 +80,15 @@ $telFontSize:36px;
                         font-weight: normal;
                     }
                 }
+                >li:first-of-type {
+                    border-radius: 3px 0 0 3px;
+                }
+                >li:last-of-type {
+                    border-radius: 0 3px 3px 0;
+                }
                 .on {
                     background-color: $activeBgColor;
+                    @include border-radius(3px);
                     >span {
                         background-color: $activeBgColor;
                     }
