--- a/css/public.css
+++ b/css/public.css
@@ -41,6 +41,7 @@ li {
 
 #header {
   width: 100%;
+  background-color: #000;
 }
 
 #header .top {
@@ -490,6 +491,7 @@ li {
 }
 
 #footer {
+  background-color: #000;
   width: 100%;
   height: 345px;
 }
