--- a/css/public.scss
+++ b/css/public.scss
@@ -70,6 +70,7 @@ li {
 //header
 #header {
     width: 100%;
+    background-color: #000;
     //top
     .top {
         width: 100%;
@@ -461,6 +462,7 @@ li {
 //middle end
 //footer
 #footer {
+    background-color: #000;
     width: 100%;
     height: 345px;
     .footer_head {
