--- a/css/address.css
+++ b/css/address.css
@@ -83,7 +83,8 @@
   line-height: 35px;
 }
 
-#middle .main .add_button button {
+#middle .main .add_button > a {
+  display: inline-block;
   cursor: pointer;
   height: 35px;
   line-height: 35px;
@@ -101,26 +102,26 @@
   margin-left: 20px;
 }
 
-#middle .main .add_addr {
+#middle .main #add_addr {
   width: 960px;
   margin-left: 28px;
   border: 1px solid #E5E5E5;
   padding: 15px 0 26px 0;
 }
 
-#middle .main .add_addr > h3 {
+#middle .main #add_addr > h3 {
   color: #222;
   font-size: 16px;
   font-weight: bold;
   margin-left: 24px;
 }
 
-#middle .main .add_addr > form > div {
+#middle .main #add_addr > form > div {
   margin-top: 10px;
   overflow: hidden;
 }
 
-#middle .main .add_addr > form > div label {
+#middle .main #add_addr > form > div label {
   font-size: 14px;
   color: #666;
   line-height: 27px;
@@ -130,7 +131,7 @@
   width: 80px;
 }
 
-#middle .main .add_addr > form > div input {
+#middle .main #add_addr > form > div input {
   height: 25px;
   border: 1px solid #b5b5b5;
   color: #666;
@@ -139,34 +140,34 @@
   float: left;
 }
 
-#middle .main .add_addr > form > div > span {
+#middle .main #add_addr > form > div > span {
   color: #B90101;
   font-size: 14px;
   margin-left: 10px;
 }
 
-#middle .main .add_addr > form > div #addruser {
+#middle .main #add_addr > form > div #addruser {
   width: 157px;
 }
 
-#middle .main .add_addr > form > div #area {
+#middle .main #add_addr > form > div #area {
   width: 190px;
 }
 
-#middle .main .add_addr > form > div #addr_details {
+#middle .main #add_addr > form > div #addr_details {
   width: 392px;
 }
 
-#middle .main .add_addr > form > div #phone,
-#middle .main .add_addr > form > div #tel {
+#middle .main #add_addr > form > div #phone,
+#middle .main #add_addr > form > div #tel {
   width: 182px;
 }
 
-#middle .main .add_addr > form > div #email {
+#middle .main #add_addr > form > div #email {
   width: 295px;
 }
 
-#middle .main .add_addr > form > button {
+#middle .main #add_addr > form > button {
   font-size: 14px;
   color: #fff;
   height: 27px;
