--- a/css/pay.scss
+++ b/css/pay.scss
@@ -135,6 +135,7 @@ $telFontSize:36px;
                     border: 1px solid #C9C9C9;
                     border-bottom: none;
                     position: relative;
+                    cursor: pointer;
                     .checkbox {
                         width: 21px;
                         height: 21px;
