--- a/css/login.scss
+++ b/css/login.scss
@@ -38,13 +38,25 @@ $telFontSize:36px;
             }
         }
         >form {
-            width: 391px;
-            margin: 34px auto 24px auto;
+            // width: 391px;
+            margin: 34px 0 24px 250.5px;
             height: 266px;
             >div {
                 margin-bottom: 11px;
                 width: 100%;
                 height: 54px;
+                .aw {
+                    float: left;
+                    font-style: normal;
+                    font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
+                    height: 54px;
+                    line-height: 54px;
+                    width: 240px;
+                    padding-left: 10px;
+                    background-color: #fff;
+                    color: $activeBgColor;
+                    display: none;
+                }
             }
             label {
                 float: left;
@@ -64,17 +76,22 @@ $telFontSize:36px;
                 width: 326px;
             }
             .loginname {
-                background-color: $proBottomBgColor;
+                >label {
+                    background-color: $proBottomBgColor;
+                }
                 >input {
-                    float: right;
+                    float: left;
                 }
             }
             .pwd {
                 overflow: hidden;
-                background-color: $proBottomBgColor;
                 line-height: 54px;
+                >label {
+                    padding: 0 18px;
+                    background-color: $proBottomBgColor;
+                }
                 >input {
-                    float: right;
+                    float: left;
                 }
             }
             .yicon {
@@ -99,14 +116,18 @@ $telFontSize:36px;
                     font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
                     color: $topAndNavColor;
                 }
+                .aw {
+                    padding-left: 18px;
+                }
             }
             >input {
-                width: 100%;
+                width: 391px;
                 color: #fff;
                 font-size: $navAndTitleAndSearchFontSize;
                 background-color: $activeBgColor;
                 cursor: pointer;
                 margin-top: 16px;
+                text-align: center;
             }
         }
         >p {
