--- a/css/pro_details.scss
+++ b/css/pro_details.scss
@@ -414,11 +414,11 @@ $telFontSize:36px;
                         width: 130px;
                         clear: right;
                     }
-                    #begin,
-                    #end {
+                    #min,
+                    #max {
                         width: 48px;
                     }
-                    #begin {
+                    #min {
                         margin-left: 2px;
                     }
                     a {
