--- a/css/register.scss
+++ b/css/register.scss
@@ -118,6 +118,7 @@ $telFontSize:36px;
                     float: left;
                     font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
                     color: $topAndNavColor;
+                    cursor: pointer;
                 }
                 >span {
                     display: block;
