--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@
   display: block;
 }
 
+#header .nav .menu .submenu {
+  display: block;
+}
+
 #middle {
   width: 100%;
   background: url(../images/body_bgimg.png) repeat-y;
