--- a/css/index.scss
+++ b/css/index.scss
@@ -30,6 +30,16 @@ $telFontSize:36px;
     display: block;
 }
 
+#header {
+    .nav {
+        .menu {
+            .submenu {
+                display: block;
+            }
+        }
+    }
+}
+
 #middle {
     width: 100%;
     background: url(../images/body_bgimg.png) repeat-y;
